--- a/HaroldforMayor1.html
+++ b/HaroldforMayor1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>Bootstrap Harold for Mayor Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="Styles.css">
  </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -32,11 +32,9 @@
         <li><a href="#platform">PLATFORM</a></li>
         <li><a href="#commitment">COMMITMENT</a></li>
         <li><a href="#volunteer">VOLUNTEER</a></li>
-        <li><a href="#contact">CONTACT</a></li>
         <li><a href="#">FACEBOOK</a></li>
         <li><a href="#">TWITTER</a></li>
-        <li><a href="#">PINTREST</a></li>
-      </ul>
+     </ul>
     </div>
   </div>
 </nav>
@@ -48,18 +46,18 @@
   </div>
 
 <div class="container">
-  <h2>CONTACT INFORMATION: input</h2>
-  <p>PLEASE ENTER THE INFORMATION REQUESTED BELOW:</p>
+  <h2>CONTACT: </h2>
+  <p>PLEASE ENTER YOUR CONTACT INFORMATION BELOW:</p>
   <form role="form">
     <div class="form-group">
       <label for="usr">Name:</label>
       <input type="text" class="form-control" id="usr">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd">
+      <label for="pwd">E-MAIL ADDRESS:</label>
+      <input type="EMAIL" class="form-control" id="pwd">
     </div>
-    <button type="button" class="btn btn-danger">Enter Now</button>
+    <button type="button" class="btn btn-danger">SUBMIT</button>
   </form>
 </div>
 
@@ -138,7 +136,7 @@
 </div>
 
 <div class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2><br>
+  <h2>COMMITMENT</h2><br>
   <h4>St. Louis will rank among the world's best cities.</h4>
   <div class="row text-center">
     <div class="col-sm-4">
@@ -163,42 +161,35 @@
       </div>
     </div>
   </div>
- <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+ <div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
-   </ol>
+    </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <h4>"This Harold Crumpton is the best. I am so happy with his achievements!"<br><span style="font-style:normal;">Michael Roe, Vice President, Comment Box</span></h4>
+        <img src="images/badge.jpg" alt="Badge" width="500" height="385">
       </div>
+
       <div class="item">
-        <h4>"One word... WOW!! Crumpton is right on time!!"<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
+        <img src="images/bumpersticker.jpg" alt="Bumpersticker" width="500" height="385">
       </div>
+    
       <div class="item">
-        <h4>"Could I... BE any more happy with Mayor Crumpton?"<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
+        <img src="images/badge.jpg" alt="Badge" width="500" height="385">
       </div>
+
       <div class="item">
-        <h4>"I really trust this Harold Crumpton! All of my friends are supporting him."<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
+        <img src="images/yardsign.jpg" alt="Yardsign" width="500" height="385">
       </div>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
 
 <!-- Container (Volunteer Section) -->
 <div class="container-fluid">
@@ -261,22 +252,23 @@
           <h3></h3>
           <h4></h4>
           <button class="btn btn-lg">Sign Up</button>
-        </div>
+         </div>
       </div>      
     </div>    
   </div>
 </div>
 
-<div class="contCitizenainer-fluid bg-grey">
+<!-- Container (Contact Section) -->
+<div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> St. Louis, MO</p>
-      <p><span class="glyphicon glyphicon-phone"></span> 1-314-443-1515</p>
-<p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
     </div>
-    <div class="col-sm-7 ">
+    <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
           <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
@@ -296,34 +288,11 @@
 </div>
 
 
-
-<div id="googleMap" style="height:400px;width:100%;"></div>
-
 <!-- Add Google Maps -->
-<script src="http://maps.googleapis.com/maps/api/js"></script>
-<script>
-var myCenter = new google.maps.LatLng(41.878114, -87.629798);
 
-function initialize() {
-var mapProp = {
-  center:myCenter,
-  zoom:12,
-  scrollwheel:false,
-  draggable:false,
-  mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
 
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
-var marker = new google.maps.Marker({
-  position:myCenter,
-  });
-
-marker.setMap(map);
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
-</script>
+<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d12465.429323517941!2d-90.23144239020998!3d38.640663304697355!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1465258311040" width="100%" height="400pxS" frameborder="0" style="border:0" allowfullscreen></iframe>
+ <!--add google maps-->
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
